--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,12 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  
+    <body>
+    <div class="container">
+      <%= render 'layouts/flash_messages' %>
 
-  <body>
-    <%= yield %>
+      <%= yield %>
+    </div>
   </body>
 </html>
