--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(massage) do |f| %>
+<%= form_for(message) do |f| %>
   <% if message.errors.any? %>
     <div id="error_explanation">
       <ul>
@@ -9,7 +9,10 @@
     </div>
   <% end %>
   
-  <%= f.label :content, "タスク" %>
+  <%= f.label :title, "タスク" %>
+  <%= f.text_field :title %>
+  
+  <%= f.label :content, "内容" %>
   <%= f.text_field :content %>
   
   <%= f.submit "投稿" %>
