--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,5 +1,6 @@
 <h1>id: <%= @message.id %> のタスク詳細ページ</h1>
 
+<p>予定日時: <%= message.period %></p>
 <p><b><big>タイトル: <%= @message.title %></big></b></p>
 <p>内容: <%= @message.content %></p>
 
