--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -9,6 +9,9 @@
     </div>
   <% end %>
   
+  <%= f.label :period, '予定日時' %>
+  <%= f.text_field :period %>
+  
   <%= f.label :title, "タスク" %>
   <%= f.text_field :title %>
   
