--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,5 +5,7 @@
     <li><%= link_to message.id, message %> : <%= message.period %> &gt; <%= message.title %> &gt; <%= message.content %></li>
   <% end %>
 </ul>
+<%= paginate @messages %>
+
 
 <%= link_to '新規タスクの投稿', new_message_path %>
