--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>KadaiTasklist</title>
     <%= csrf_meta_tags %>
 
@@ -13,8 +17,10 @@
 
   
     <body>
+    <%= render 'layouts/navbar' %>
+    
     <div class="container">
-      <%= render 'layouts/flash_messages' %>
+      <%= render 'layouts/flash_tasks' %>
 
       <%= yield %>
     </div>
