--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,16 @@
 <h1>id: <%= @task.id %> のタスク詳細ページ</h1>
 
-<p><b><big>ステータス: <%= @task.status %></big></b></p>
-<p>内容: <%= @task.content %></p>
+<table class="table table-boadered">
+    <tr>
+      <th>id</th>
+      <td><%= @task.id %></td>
+    </tr>
+    <tr>
+    <th><b><big>ステータス: <%= @task.status %></big></b></th>
+    <tr>
+    <th>内容: <%= @task.content %></th>
+    </tr>
+</table>
 
-<%= link_to '一覧に戻る', tasks_path %>
-<%= link_to 'このタスクを編集する', edit_task_path(@task) %>
-<%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+<%= link_to 'このタスクを編集する', edit_task_path(@task), class: 'btn btn-default' %>
+<%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class: 'btn btn-danger' %>
